--- a/statistics/statistics1.Rmd
+++ b/statistics/statistics1.Rmd
@@ -66,4 +66,111 @@ Now consider the random variable $\bar{Y} = \frac{Y_1 + Y_2 + \cdots + Y_n}{n}$.
 The question has a little to do with the concepts that can be hidden beneath notation.   It could be extended by asking about the variance of $y_i$ and $\hat{y}$
 
 
+```{r}
+blah <- function(x){
+  inv_count <- 0
+  n <- length(x)
+  
+  for(i in c(1:n)){
+    for(j in (i:n)){
+      if(x[i] > x[j])
+        inv_count <- inv_count + 1
+ }}
+  return (inv_count)
+}
+ 
+  numbers = c(1, 20, 6, 4, 5)
+numbers <- c(2, 4, 1, 3, 5 )
+numbers <- as.vector(read.csv("IntegerArray.txt", header = FALSE)[,1])
+blah(numbers)
+blah(x)
+  printf(" Number of inversions are %d \n", getInvCount(arr, 5));
+  getchar();
+  return 0;
+}
 
+
+
+int  _mergeSort(int arr[], int temp[], int left, int right);
+int merge(int arr[], int temp[], int left, int mid, int right);
+  
+/* This function sorts the input array and returns the
+   number of inversions in the array */
+
+  
+  mergeSort <- function(x){
+    n <- length(x)
+    return _mergeSort(x, temp, 0, n - 1);
+}
+  
+
+ DomergeSort <- function(x, temp, left, right){
+  if (right > left){
+    mid = (right + left)/2;
+  
+    /* Inversion count will be sum of inversions in left-part, right-part
+      and number of inversions in merging */
+    inv_count  = DomergeSort(x, temp, left, mid);
+    inv_count += DomergeSort(x, temp, mid+1, right);
+  
+    /*Merge the two parts*/
+    inv_count += merge(arr, temp, left, mid+1, right);
+  }
+  return inv_count;
+}
+  
+/* This funt merges two sorted arrays and returns inversion count in
+   the arrays.*/
+int merge(int arr[], int temp[], int left, int mid, int right)
+{
+  int i, j, k;
+  int inv_count = 0;
+  
+  i = left; /* i is index for left subarray*/
+  j = mid;  /* i is index for right subarray*/
+  k = left; /* i is index for resultant merged subarray*/
+  while ((i <= mid - 1) && (j <= right))
+  {
+    if (arr[i] <= arr[j])
+    {
+      temp[k++] = arr[i++];
+    }
+    else
+    {
+      temp[k++] = arr[j++];
+  
+     /*this is tricky -- see above explanation/diagram for merge()*/
+      inv_count = inv_count + (mid - i);
+    }
+  }
+  
+  /* Copy the remaining elements of left subarray
+   (if there are any) to temp*/
+  while (i <= mid - 1)
+    temp[k++] = arr[i++];
+  
+  /* Copy the remaining elements of right subarray
+   (if there are any) to temp*/
+  while (j <= right)
+    temp[k++] = arr[j++];
+  
+  /*Copy back the merged elements to original array*/
+  for (i=left; i <= right; i++)
+    arr[i] = temp[i];
+  
+  return inv_count;
+}
+  
+/* Driver progra to test above functions */
+int main(int argv, char** args)
+{
+  int arr[] = {1, 20, 6, 4, 5};
+  printf(" Number of inversions are %d \n", mergeSort(arr, 5));
+  getchar();
+  return 0;
+}
+
+
+
+
+```
